--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -9,15 +9,15 @@ env:
 
 font:
   normal:
-    family: CommitMono Nerd Font
+    family: Hack Nerd Font Mono
     style: Regular
 
   bold:
-    family: CommitMono Nerd Font
+    family: Hack Nerd Font Mono
     style: Bold
 
   italic:
-    family: CommitMono Nerd Font
+    family: Hack Nerd Font Mono
     style: Italic
 
 colors:
