--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,6 +28,8 @@ bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
@@ -53,6 +55,8 @@ set -g @catppuccin_directory_text "#{pane_current_path}"
 # set -g @plugin 'github_username/plugin_name#branch'
 # set -g @plugin 'git@github.com:user/plugin'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
+
+set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
